removed weather files

--- a/Bowling/src/BowlingApi/Properties/launchSettings.json
+++ b/Bowling/src/BowlingApi/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "BowlingApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "api/game",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
